objects/Credit_Card_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <description>Comdata API - Account Code
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Account Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Address_1__c</fullName>
        <label>Alternate Delivery Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Address_2__c</fullName>
        <label>Alternate Delivery Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Attention_To__c</fullName>
        <label>Alternate Delivery Attention To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_City__c</fullName>
        <label>Alternate Delivery City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_Postal_Code__c</fullName>
        <label>Alternate Delivery Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Delivery_State__c</fullName>
        <label>Alternate Delivery State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Default_Limit_Warning_Level__c</fullName>
        <description>Default percentage of available credit to total limit at which a warning is sent to the user. Value is stored as a percent value without the percent sign.
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>CC Default Limit Warning Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Month_Cycle_Reset_Date__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>CC Month Cycle Reset Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Profile_Flag__c</fullName>
        <description>Declining Cards are normally set up without a Company Standard Profile so that the limit (maxCycleAmount) can be controlled via the Credit Card or Portfolio record.</description>
        <inlineHelpText>Determines if a Card should be set up with (Y) or without (N) a Company Standard Profile</inlineHelpText>
        <label>Card Profile Flag</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Vendor__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Card Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Comdata API - Company Id - populates the Company Name field on the card
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Unique Id for the internal ABC profile</inlineHelpText>
        <label>Customer Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Alert_To_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Decline Alert To Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Card_Expiration_Months__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Default Card Expiration (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Card_Profile_Value__c</fullName>
        <inlineHelpText>Default Profile Number for new Cards</inlineHelpText>
        <label>Default Card Profile Value</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Option_Code__c</fullName>
        <formula>CASE(Default_Delivery_Option__c ,
&apos;UPS 2nd Day Air&apos;,&apos;3&apos;,
&apos;FEDEX Priority&apos;,&apos;4&apos;,
&apos;UPS Next Day Air&apos;,&apos;1&apos;,
&apos;FEDEX International&apos;,&apos;9&apos;,
&apos;UPS Ground&apos;,&apos;5&apos;,
&apos;USPS&apos;,&apos;8&apos;,
&apos;UPS Worldwide Expedited&apos;,&apos;0&apos;,
&apos;FEDEX Two Day&apos;,&apos;6&apos;,
&apos;FEDEX Ground&apos;,&apos;7&apos;,
&apos;6&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Delivery Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Option__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Default Delivery Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Portfolio_Profile__c</fullName>
        <inlineHelpText>Default profile added to a portfolio when there is no related credit card</inlineHelpText>
        <label>Default Portfolio Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Portfolio_Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Default Portfolio Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Vendor_Card_Status__c</fullName>
        <inlineHelpText>Default Status Code for new cards
A = Active
B = Blocked</inlineHelpText>
        <label>Default Vendor Card Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expedited_Delivery_Option_Code__c</fullName>
        <formula>CASE(Expedited_Delivery_Option__c ,
&apos;UPS 2nd Day Air&apos;,&apos;3&apos;,
&apos;FEDEX Priority&apos;,&apos;4&apos;,
&apos;UPS Next Day Air&apos;,&apos;1&apos;,
&apos;FEDEX International&apos;,&apos;9&apos;,
&apos;UPS Ground&apos;,&apos;5&apos;,
&apos;USPS&apos;,&apos;8&apos;,
&apos;UPS Worldwide Expedited&apos;,&apos;0&apos;,
&apos;FEDEX Two Day&apos;,&apos;6&apos;,
&apos;FEDEX Ground&apos;,&apos;7&apos;,
&apos;6&apos;)</formula>
        <label>Expedited Delivery Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedited_Delivery_Option__c</fullName>
        <label>Expedited Delivery Option</label>
        <picklist>
            <picklistValues>
                <fullName>UPS 2nd Day Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDEX Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS Next Day Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDEX International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS Worldwide Expedited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDEX Two Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDEX Ground</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Pull__c</fullName>
        <description>Date stamp of the last time credit card transactions were downloaded.
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Last Transaction Pull</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mask_Card_Num_On_Create__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Mask Card Num On Create</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mask_Card_Num_on_Inquiry_Update__c</fullName>
        <description>Masked value is formatted as 1111 11XX XXXX 1111</description>
        <inlineHelpText>Mask the Card Number in API communications for Inquiry and Update operations.</inlineHelpText>
        <label>Mask Card Num on Inquiry/Update</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Card_Set_Up_Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>New Card Set Up Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Card_Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>New Card Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Password</label>
        <length>80</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Portfolio_Record_Owner__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Portfolio Record Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Currently used to send Echosign Card Agreement - may be used later for additional emails and access for the Credit Card Admin program.</description>
        <inlineHelpText>User account used for sending Echosign Agreement</inlineHelpText>
        <label>Service User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Card_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Card_Record_Type__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Staff Card Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Portfolio_Profile__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Staff Portfolio Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Portfolio_Record_Type__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin.  Used in Approve Card Request Flow</description>
        <label>Staff Portfolio Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Email_Template__c</fullName>
        <inlineHelpText>Template Unique Name (API) for the Weekly Card Statement email template.</inlineHelpText>
        <label>Statement Email Template</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Set to &apos;Active&apos; to make this the active set of settings (Only one may be set as Active)</inlineHelpText>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_History_Days__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Number of days of transaction history to download each time.  Maximum is 45 days.</inlineHelpText>
        <label>Transaction History (Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traveldesk_Email__c</fullName>
        <label>Traveldesk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xmlns_main__c</fullName>
        <label>xmlns:main</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xmlns_soapenv__c</fullName>
        <label>xmlns:soapenv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xmlns_wsse__c</fullName>
        <label>xmlns:wsse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xmlns_wsu__c</fullName>
        <label>xmlns:wsu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Card Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Card Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Card Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Transaction_Days_Max_45</fullName>
        <active>true</active>
        <description>Transaction History (Days) cannot be greater than 45</description>
        <errorConditionFormula>Transaction_History_Days__c &gt; 45</errorConditionFormula>
        <errorDisplayField>Transaction_History_Days__c</errorDisplayField>
        <errorMessage>Transaction History (Days) cannot exceed 45 days.</errorMessage>
    </validationRules>
</CustomObject>